# Industrial-Monitoring-System

./: .gitignore  CMakeLists.txt  GITHUB.md  README.md  app.js  config.yaml  docker-compose.yml  flows.json  index.html  main.cpp  mosquitto.conf  requirements.txt  sensor_simulator.py  start.ps1  start.sh  styles.css
